--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 *{
-    outline: 1px red solid;
+    /* outline: 1px red solid; */
     font-family: "Ubuntu", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+
+body, html{
+  margin: 0;
 }
 
 .ubuntu-light {
@@ -53,7 +57,38 @@
   font-style: italic;
 }
 
-
 body{
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: 100vh;
+}
+#main-content{
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  height: fit-content;
+  gap: 40px;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  backdrop-filter: blur(20px);
+}
+
+div#main-content{
+  padding: 10px 100px;
+  margin: 0 10px;
+}
+.border-style{
+  /* box-shadow: 0px 0px 10px 1px; */
+  /* border: 2px solid blue; */
+}
+
+#main-navbar{
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
 }
