--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@
     font-style: normal;
 }
 
+a{
+  text-decoration: none;
+}
+
 body, html{
+  background-color: #161616;
+  color: white;
   margin: 0;
 }
 
@@ -57,38 +63,12 @@ body, html{
   font-style: italic;
 }
 
-body{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  height: 100vh;
-}
-#main-content{
-  display: flex;
-  position: relative;
-  justify-content: center;
-  align-items: center;
-  width: fit-content;
-  height: fit-content;
-  gap: 40px;
-  border-top: 1px solid;
-  border-bottom: 1px solid;
-  backdrop-filter: blur(20px);
-}
-
-div#main-content{
-  padding: 10px 100px;
-  margin: 0 10px;
-}
-.border-style{
-  /* box-shadow: 0px 0px 10px 1px; */
-  /* border: 2px solid blue; */
-}
-
-#main-navbar{
-  display: flex;
-  flex-direction: row;
-  gap: 50px;
+.card-style{
+  padding: 15px;
+  border-radius: 10px;
+  width: 500px;
+  margin: 10px 0;
+  background-color: #212121;
+  /* box-shadow: 0 0 5px 0.5px; */
+  border: 0.5px solid rgba(211, 211, 211, 0.082);
 }
