--- a/main-style.css
+++ b/main-style.css
@@ -1,14 +1,194 @@
-body{
+#left-content-container{
     margin: 50px 100px;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    height: 85vh;
+    overflow: hidden;
 }
 
 .nav-bar{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 15px;
+    margin-bottom: 0;
 }
 
 .nav-bar .left-section{
     display: flex;
     gap: 15px;
 }
+
+.left-section i{
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+.nav-bar .left-section i:hover{
+    color:white !important;
+    transition: 300ms ease;
+}
+
+#left-main-content{
+    height: 79.5%;
+}
+
+.hire-me{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 10px;
+    padding: 0px 10px;
+    margin: 0;
+    border-radius: 5px;
+    background-color: #363636;
+}
+
+.work-title, .available-for-work{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.work-title > *, .available-for-work > *{
+    margin: 0;
+}
+
+.available-for-work{
+    font-size: 12px;
+    font-weight: bold;
+    padding: 5px 10px;
+    border-radius: 10px;
+    background-color: #263b2d;
+}
+
+.profile-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+}
+
+.profile-details *{
+    margin: 15px 0;
+}
+
+.profile-details > p{
+    font-size: 15px;
+    color: #cbcbcb;
+}
+
+.hire-me-and-copy-email{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    gap: 10px;
+}
+
+.hire-me-and-copy-email *{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 5px;
+    width: fit-content;
+}
+
+.copy-email{
+    margin: 0;
+    border-radius: 5px;
+    background-color: #363636;
+}
+
+.hire-me, .copy-email{
+    border: 1px solid #333333;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.hire-me:hover, .copy-email:hover{
+    background-color: #333333;
+    transition: 300ms ease;
+    cursor: pointer;
+}
+
+.projects-container{
+    padding: 0px 20px;
+    border-radius: 10px;
+    margin: 10px 0;
+    height: 45%;
+    /* padding-bottom: 10px; */
+    background-color: #2c2c2c;
+    border: 0.5px solid rgba(211, 211, 211, 0.082);
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+
+.projects-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.projects-header > *{
+    margin: 10px 0;
+}
+
+.projects-header .hire-me{
+    background-color: #333333;
+}
+
+.projects-header .hire-me:hover{
+    background-color: #434343;
+}
+
+.projects-summary{
+    display: flex;
+    flex-direction: column;
+}
+
+.projects-summary > div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 10px;
+    background-color: #373737;
+    border: 0.5px solid rgba(211, 211, 211, 0.082);
+    margin: 5px 0;
+}
+
+.individual-projects-description{
+    width: 75%;
+}
+
+.individual-projects-description > *{
+    position: relative;
+    margin: 10px 0;
+}
+
+#right-content-container{
+    position: absolute;
+    margin-left: 45%;
+    height: 100vh;
+    width: 50vw;
+    overflow: scroll;
+}
+
+
+
+
+
+
+
