--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    /* outline: 1px red solid; */
+    outline: 1px red solid;
     font-family: "Ubuntu", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -13,6 +13,18 @@ body, html{
   background-color: #161616;
   color: white;
   margin: 0;
+}
+
+::-webkit-scrollbar { /* scroll bar*/
+  width: 5px;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-track { /* scroll bar background*/
+  background: none;
+}
+::-webkit-scrollbar-thumb { /* scroll bar*/
+  background: #696969;
+  border-radius: 4px;
 }
 
 .ubuntu-light {
@@ -64,11 +76,16 @@ body, html{
 }
 
 .card-style{
-  padding: 15px;
+  padding: 20px 7px;
   border-radius: 10px;
-  width: 500px;
   margin: 10px 0;
   background-color: #212121;
-  /* box-shadow: 0 0 5px 0.5px; */
   border: 0.5px solid rgba(211, 211, 211, 0.082);
+}
+
+.circle{
+  background-color: gray;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
 }
