--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    outline: 1px red solid;
+    /* outline: 1px red solid; */
     font-family: "Ubuntu", sans-serif;
     font-weight: 400;
     font-style: normal;
