--- a/main-style.css
+++ b/main-style.css
@@ -113,7 +113,6 @@
 }
 
 .hire-me, .copy-email{
-    border: 1px solid #333333;
     background-color: rgba(255, 255, 255, 0);
 }
 
@@ -133,7 +132,6 @@
     overflow: scroll;
     overflow-x: hidden;
 }
-
 
 .projects-header{
     display: flex;
@@ -179,15 +177,56 @@
 
 #right-content-container{
     position: absolute;
+    display: flex;
+    flex-direction: column;
     margin-left: 50%;
     height: 100vh;
     width: 33vw;
     overflow: scroll;
 }
 
+#right-content-container > div{
+    border-radius: 10px;
+    background-color: #212121;
+    border: 0.5px solid rgba(211, 211, 211, 0.082);
+    margin: 5px 0;
+}
 
+.general-title{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
 
+.description-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+}
 
+.description-details *{
+    margin: 15px 0;
+}
 
+.description-details > p{
+    font-size: 15px;
+    color: #cbcbcb;
+}
 
+.list-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
 
+.list-container img{
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    margin-bottom: 5px;
+}
