--- a/main-style.css
+++ b/main-style.css
@@ -230,3 +230,10 @@
     padding: 10px;
     margin-bottom: 5px;
 }
+
+.list-socials{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
