--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ a{
   text-decoration: none;
 }
 
+a:active{
+  color: white;
+}
+a:visited{
+  color: white;
+}
+
 body, html{
   background-color: #161616;
   color: white;
