--- a/main-style.css
+++ b/main-style.css
@@ -106,6 +106,10 @@
     width: fit-content;
 }
 
+.hire-me-and-copy-email .hire-me{
+    padding: 0 5px;
+}
+
 .copy-email{
     margin: 0;
     border-radius: 5px;
@@ -114,12 +118,17 @@
 
 .hire-me, .copy-email{
     background-color: rgba(255, 255, 255, 0);
+    border: 0.5px solid rgba(211, 211, 211, 0.082);
 }
 
 .hire-me:hover, .copy-email:hover{
     background-color: #333333;
     transition: 300ms ease;
     cursor: pointer;
+}
+
+.hire-me:active, .copy-email:active{
+    background-color: #696969;
 }
 
 .projects-container{
@@ -150,6 +159,10 @@
     background-color: #434343;
 }
 
+.projects-header .hire-me:active{
+    background-color: #555555;
+}
+
 .projects-summary{
     display: flex;
     flex-direction: column;
@@ -166,9 +179,21 @@
     margin: 5px 0;
 }
 
+.individual-projects{
+    transition: 300ms ease;
+}
+
+.individual-projects:hover{
+    background-color: #575757;
+    scale: 1.01;
+    cursor: pointer;
+    transition: 300ms ease;
+}
+
 .individual-projects-description{
     width: 75%;
 }
+
 
 .individual-projects-description > *{
     position: relative;
